WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57740
Fix 2-space indentation introduced in
bug 54706
.
https://bugs.webkit.org/show_bug.cgi?id=57740
Summary
Fix 2-space indentation introduced in bug 54706.
Luke Macpherson
Reported
2011-04-03 20:27:41 PDT
Fix 2-space indentation introduced in
bug 54706
.
Attachments
Patch
(1.69 KB, patch)
2011-04-03 20:28 PDT
,
Luke Macpherson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Luke Macpherson
Comment 1
2011-04-03 20:28:47 PDT
Created
attachment 88029
[details]
Patch
WebKit Commit Bot
Comment 2
2011-04-03 21:14:08 PDT
Comment on
attachment 88029
[details]
Patch Clearing flags on attachment: 88029 Committed
r82799
: <
http://trac.webkit.org/changeset/82799
>
WebKit Commit Bot
Comment 3
2011-04-03 21:14:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug