2011-04-03  Luke Macpherson   <macpherson@chromium.org>

Reviewed by Darin Adler.

        Fix 2-space indentation introduced in bug 54706.
        https://bugs.webkit.org/show_bug.cgi?id=57740

        No new tests - whitespace changes only.

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):
        Convert 2-space indentation to 4-space indentation.

Canonical link: https://commits.webkit.org/72586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82799 268f45cc-cd09-0410-ab3c-d52691b4dbfc